[package]
name = "xan"
version = "0.43.0"  #:version
authors = [
  "Andrew Gallant <jamslam@gmail.com>",
  "Guillaume Plique <guillaume.plique@sciencespo.fr>",
  "Béatrice Mazoyer <beatrice.mazoyer@sciencespo.fr>",
  "Laura Miguel <laura.miguel@sciencespo.fr>",
  "César Pichon <cesar.pichon@sciencespo.fr>",
  "Anna Charles <anna.charles@sciencespo.fr>",
  "Julien Pontoire <julien.pontoire@sciencespo.fr>"
]
description = "The CSV magician"
documentation = "https://github.com/medialab/xan#readme"
homepage = "https://github.com/medialab/xan"
repository = "https://github.com/medialab/xan"
readme = "README.md"
keywords = ["csv", "tsv", "cli"]
license = "Unlicense OR MIT"
autotests = false
edition = "2021"
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE-MIT",
  "UNLICENSE",
  "src/**/*.rs",
  "src/**/*.pest",
  "tests/**/*.rs"
]

[[bin]]
name = "xan"
test = true
bench = false
doctest = false

[[test]]
name = "tests"

[dependencies]
aho-corasick = "1.1.3"
arrayvec = "0.7.6"
base64 = "0.22.1"
bstr = "1.11.3"
btoi = "0.4.3"
bytesize = "1.3.0"
calamine = "0.26.1"
colored = "2.0.0"
colorgrad = { version = "0.7.0", default-features = false, features = ["preset"] }
console = "0.15.8"
crossbeam-channel = "0.2.4"
csv = "1.3.1"
csv-index = "0.1.6"
ctrlc = "3.4.4"
deepsize = "0.2.0"
dlv-list = "0.5.2"
docopt = "1"
emojis = "0.6.4"
encoding = "0.2.33"
ext-sort = { version = "0.1.4", features = ["memory-limit"] }
fast-float = "0.2.0"
filetime = "0.1"
flate2 = "1.0.35"
glob = "0.3.1"
hyperloglogplus = "0.4.1"
indexmap = "2.7.1"
indicatif = "0.17.8"
jiff = "0.1.29"
lazy_static = "1.4.0"
md5 = "0.7.0"
mime2ext = "0.1.53"
namedlock = "0.7.0"
numfmt = "1.1.1"
num_cpus = "1.4"
opener = "0.7.2"
ordered-float = "4.2.2"
paltoquet = "0.11.0"
pariter = "0.5.1"
pest = "2.7.15"
pest_derive = "2.7.15"
quick-xml = "0.37.2"
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_seeder = "0.4.0"
ratatui = { version = "0.29.0", default-features = false }
rayon = "1.10.0"
regex = "1"
rust_xlsxwriter = "0.79.4"
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = { version = "1.0", features = ["preserve_order"] }
shlex = "1.3.0"
tdigest = "0.2.3"
termsize = "0.1.8"
textwrap = "0.16.1"
threadpool = "1.3"
thread_local = "1.1.8"
topk = "0.5.0"
transient-btree-index = "0.5.1"
unidecode = "0.3.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
uuid = { version = "0.8.2", features = ["v4"] }

# NOTE: pager does not work on windows
[target.'cfg(not(windows))'.dependencies]
pager = "0.16.1"
