[package]
name = "xan"
version = "0.54.0"
rust-version = "1.83.0"
authors = [
  "Guillaume Plique <guillaume.plique@sciencespo.fr>",
  "Béatrice Mazoyer <beatrice.mazoyer@sciencespo.fr>",
  "Laura Miguel <laura.miguel@sciencespo.fr>",
  "César Pichon <cesar.pichon@sciencespo.fr>",
  "Anna Charles <anna.charles@sciencespo.fr>",
  "Julien Pontoire <julien.pontoire@sciencespo.fr>",
  "Evan Chevalerias <evan.chevalerias@sciencespo.fr>"
]
description = "The CSV magician"
documentation = "https://github.com/medialab/xan#readme"
homepage = "https://github.com/medialab/xan"
repository = "https://github.com/medialab/xan"
readme = "README.md"
keywords = ["csv", "tsv", "cli"]
license = "Unlicense OR MIT"
autotests = false
edition = "2021"
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE-MIT",
  "UNLICENSE",
  "src/**/*.rs",
  "src/moonblade/grammar.pest",
  "src/moonblade/doc/*.json",
  "src/moonblade/doc/*.md",
  "src/moonblade/doc/*.txt",
  "tests/**/*.rs"
]

[[bin]]
name = "xan"
test = true
bench = false
doctest = false

[[test]]
name = "tests"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.release-fast]
inherits = "release"
codegen-units = 16
lto = false

[profile.release-debug]
inherits = "release"
codegen-units = 16
strip = false
debug = true
lto = false

[dependencies]
ahash = "0.8.12"
aho-corasick = "1.1.3"
arrayvec = "0.7.6"
base64 = "0.22.1"
bgzip = { version = "0.3.1", features = ["rust_backend"]}
bstr = "1.11.3"
btoi = "0.4.3"
bytesize = "2.0.1"
calamine = "0.31.0"
colored = "2.0.0"
colorgrad = { version = "0.7.0", default-features = false, features = ["preset"] }
console = "0.16.1"
csv = "1.3.1"
comrak = { version = "0.39.0", default-features = false }
deepsize = "0.2.0"
dlv-list = "0.6.0"
docopt = "1"
ego-tree = "0.10.0"
emojis = "0.6.4"
encoding = "0.2.33"
ext-sort = { version = "0.1.5", features = ["memory-limit"] }
fast-float2 = "0.2.3"
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-rs"] }
glob = "0.3.1"
html-escape = "0.2.13"
hyperloglogplus = "0.4.1"
indexmap = "2.7.1"
indicatif = "0.18.0"
jiff = "0.2.14"
lazy_static = "1.4.0"
md5 = "0.7.0"
memmap2 = "0.9.8"
mime2ext = "0.1.53"
namedlock = "0.7.0"
numfmt = "=1.1.1"
num_cpus = "1.4"
npyz = "0.8.3"
opener = "0.7.2"
ordered-float = "5.0.0"
pad = "0.1.6"
paltoquet = "0.11.0"
pariter = "0.5.1"
pest = "2.7.15"
pest_derive = "2.7.15"
quick-xml = "0.38.3"
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_seeder = "0.4.0"
ratatui = { version = "0.29.0", default-features = false }
rayon = "1.10.0"
regex = "1"
regex-automata = "0.4.9"
rust_xlsxwriter = "0.88.0"
scraper = "0.23.1"
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = { version = "1.0", features = ["preserve_order"] }
shlex = "1.3.0"
simd-csv = "0.9.0"
simd-json = "0.14.3"
sprintf = "0.4.1"
tar = { version = "0.4.44", default-features = false }
tdigest = "0.2.3"
termsize = "0.1.8"
textwrap = "0.16.1"
topk = "0.5.0"
transient-btree-index = "0.5.1"
unidecode = "0.3.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4"] }
zstd = "0.13.3"

# NOTE: pager does not work on windows
[target.'cfg(not(windows))'.dependencies]
pager = "0.16.1"

# NOTE: musl's default allocator seems to be very slow
[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
jemallocator = "0.5.4"
